--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <table cellspacing="15">
     <tr>
         <td>
-            <img src="img/logo.jpeg" alt="logotype" width="200"/>
+            <img src="logo.jpeg" alt="logotype" width="200"/>
         </td>
         <td>
             <h1>Керим Аксаков</h1>
