--- a/index.html
+++ b/index.html
@@ -5,95 +5,104 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Aksakov CS</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<table cellspacing="15">
-    <tr>
-        <td>
-            <img src="logo.jpeg" alt="logotype" width="200"/>
-        </td>
-        <td>
+<div class="container">
+    <div class="info">
+        <img src="logo.jpeg" alt="logotype" class="logo"/>
+        <div class="info-text">
             <h1>Керим Аксаков</h1>
-            <p>
-                <em>Я основатель одноименного <strong>Youtube канала</strong></em>
-            </p>
+            <p>Я основатель одноименного <strong>Youtube канала</strong></p>
             <p>Я люблю путешевствовать, заниматься спортом и программировать</p>
-        </td>
-    </tr>
-</table>
 
-<hr/>
+            <h4>Мои социальные сети</h4>
 
-<h2>Мои социальные сети</h2>
-<ul>
-    <li><a href="https://instagram.com/dostavka_v_tm" target="_blank">Instagram</a></li>
-    <li><a href="https://t.me/dostavkavtm" target="_blank">Telegram</a></li>
-</ul>
+            <a href="https://instagram.com/dostavka_v_tm" target="_blank">Instagram</a>
+            |
+            <a href="https://t.me/dostavkavtm" target="_blank">Telegram</a>
+        </div>
+    </div>
 
-<hr>
+    <div class="card bg-yellow">
+        <h2>Мои хобби</h2>
+        <ol class="list ">
+            <li>Блоггер</li>
+            <li>Быстрая езда на машинах</li>
+            <li>Спорт: MMA</li>
+            <li>Путешевствия</li>
+        </ol>
+    </div>
 
-<h2>Мои хобби</h2>
-<ol>
-    <li>Блоггер</li>
-    <li>Быстрая езда на машинах</li>
-    <li>Спорт: MMA</li>
-    <li>Путешевствия</li>
-</ol>
+    <div class="card bg-green">
+        <h2>Опыт работы</h2>
+        <table class="table">
 
-<hr>
+            <tr>
+                <td>LPTracker</td>
+                <td>Frontend</td>
+                <td>2015 - 2016</td>
+            </tr>
 
-<h2>Опыт работы</h2>
-<table>
-    <tr>
-        <th>Компания</th>
-        <th>Должность</th>
-        <th>Год</th>
-    </tr>
+            <tr>
+                <td>EPAM</td>
+                <td>Software Engineer</td>
+                <td>2016 - 2017</td>
+            </tr>
 
-    <tr>
-        <td>EPAM</td>
-        <td>Software Engineer</td>
-        <td>2016 - 2017</td>
-    </tr>
+            <tr>
+                <td>Software Outsorcing Services</td>
+                <td>Lead Frontend</td>
+                <td>2017 - 2019</td>
+            </tr>
 
-    <tr>
-        <td>Software Outsorcing Services</td>
-        <td>Lead Frontend</td>
-        <td>2017 - 2019</td>
-    </tr>
+            <tr>
+                <td>Youtube</td>
+                <td>Blogger</td>
+                <td>2019 - now</td>
+            </tr>
 
-</table>
+        </table>
+    </div>
 
-<hr>
+    <div class="card bg-red">
+        <h2>Наши проекты</h2>
+        <ul class="link-list">
+            <li>
+                <a href="https://exteil.com" target="_blank">Exteil.com - интернет магазин автозапчастей в
+                    Туркменистане</a>
+            </li>
+            <li>
+                <a href="https://go.exteil.com" target="_blank">Доставка в ТМ - Сервис по доставке товаров из ОАЭ в
+                    Туркменистан</a>
+            </li>
+        </ul>
+    </div>
 
-<h2>Youtube курсы</h2>
-<a href="youtube.html">Посмотреть список</a>
+    <div class="contact">
+        <h2>Связаться со мной</h2>
 
-<hr>
+        <form action="index.html">
+            <div class="row">
+                <div class="form-group">
+                    <label for="name">Ваше имя:</label>
+                    <input type="text" id="name" placeholder="Введите ваше имя...">
+                </div>
 
-<h2>Связаться со мной</h2>
+                <div class="form-group">
+                    <label for="email">Ваш email:</label>
+                    <input type="email" id="email" placeholder="Введите ваш email...">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="text">Ваше сообщение:</label>
+                <textarea name="text" id="text" cols="30" rows="7"></textarea>
+            </div>
 
-<form action="index.html">
-    <label for="name">Ваше имя:</label>
-    <input type="text" id="name" placeholder="Введите ваше имя...">
-
-    <br>
-
-    <label for="email">Ваш email:</label>
-    <input type="email" id="email" placeholder="Введите ваш email...">
-
-    <br>
-
-    <label for="text">Ваш сообщение:</label>
-
-    <br>
-
-    <textarea name="text" id="text" cols="30" rows="7"></textarea>
-
-    <br>
-
-    <input type="submit" value="Связаться">
-</form>
+            <input class="btn" type="submit" value="Связаться">
+        </form>
+    </div>
+</div>
 </body>
 </html>
